# big-brain-compiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.bf  test.c  test.cpp  test.ll
include/: ast.h  ast_builder.h  bf_error.h  cmd_parser.h  code_gen.h  lowering.h  util.h
src/: CMakeLists.txt  ast_builder.cpp  cmd_parser.cpp  code_gen.cpp  lowering.cpp  main.cpp  util.cpp
test/: CMakeLists.txt  test.sh
test/input/: binary.bf  fibonacci.bf  give-you-up.bf  hello.bf  simple-inp.bf
test/output/: cell-size.out  fibonacci.out
